--- a/index.html
+++ b/index.html
@@ -34,24 +34,15 @@
         <div class="col d-flex justify-content-center">
           <section class="icons">
             <h2>MES RESEAUX SOCIAUX</h2>
-            <a
-              href="https://www.linkedin.com/in/olivia-quenum-025ba2a8/"
-              target="_blank"
-            >
+            <a href="https://www.tiktok.com/@marroli_" target="_blank">
               <img src="Assets/tiktok.png" />
             </a>
 
-            <a
-              href="https://www.linkedin.com/in/olivia-quenum-025ba2a8/"
-              target="_blank"
-            >
+            <a href="https://www.instagram.com/oli.olly/" target="_blank">
               <img src="Assets/instagram.png" />
             </a>
 
-            <a
-              href="https://www.linkedin.com/in/olivia-quenum-025ba2a8/"
-              target="_blank"
-            >
+            <a href="https://twitter.com/marroli" target="_blank">
               <img src="Assets/x.png" />
             </a>
 
